--- a/core/projects/projects.html
+++ b/core/projects/projects.html
@@ -7,7 +7,7 @@
 {% block title %}Projects{% endblock %}
 
 {% block content %}
-  <h2 class="mt-3 text-center" >Open Projects</h2>
+  <h2 class="mt-3 text-center">Open Projects</h2>
 
 
   <div class="row">
@@ -47,6 +47,7 @@
                         <h5 class="mt-3"> {% icon 'tasks' %} {{project.title}}</h5>
                         <p>Posted by: {{project.user.user.username}}</p>
                         <p class="project-description">{{project.description}}</p>
+                        <p>Total budget: {{project.total_budget}}</p>
                     </div>
                   </div>
                   </div>
