--- a/core/projects/new_project.html
+++ b/core/projects/new_project.html
@@ -48,6 +48,17 @@
             ></textarea>
           </label>
         </p>
+        <p>
+          <label class="new-task-input">Location:
+            <textarea
+              type="text"
+              name="task_location"
+              required
+              maxlength="50"
+              class="form-control"
+            ></textarea>
+          </label>
+        </p>
       </div>
     </div>
     <div class="row">
