--- a/core/projects/project_view.html
+++ b/core/projects/project_view.html
@@ -30,6 +30,7 @@
             <h4>{{task.title}}</h4>
             <p>Budget: {{task.budget}} </p>
             <p>Description: <br> {{task.description}}</p>
+            <p>Location: <br> {{task.location}}</p>
           </div>
           {% endfor %}
         </div>
