--- a/core/base.html
+++ b/core/base.html
@@ -59,7 +59,7 @@
       <div class="my-2 my-lg-0 mr-5">
         {% if user.is_authenticated %}
         <a role="button" class="btn btn-outline-primary my-2 my-sm-0" href="{% url 'new_project' %}">New project</a>
-        <a role="button" class="btn btn-outline-primary my-2 my-sm-0" href="{% url 'profile' %}">Profile</a>
+        <a role="button" class="btn btn-outline-primary my-2 my-sm-0" href="{% url 'profile' %}">Renew account</a>
         <a class="btn btn-outline-primary my-2 my-sm-0" href="{% url 'logout' %}" role="button">Sign out</a>
         {% else %}
         <a role="button" class="btn btn-link my-sm-0 mr-2" href="{% url 'signup' %}">Sign up</a>
