--- a/core/user/profile.html
+++ b/core/user/profile.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-  <h2>Profile</h2>
+  <h2>New account</h2>
   <form method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
