Refactoring - all tests should pass now

--- a/core/payment/receipt.html
+++ b/core/payment/receipt.html
@@ -19,7 +19,7 @@
       <h4>Task: {{task.title}}</h4>
 
       <p>Payment receiver: {{taskoffer.offerer.user.username}}</p>
-      <p>Paid price: {{taskoffer.price}}</p>
+      <p>Paid price: {{taskoffer.price_offered}}</p>
 
       <p>Original task:<br> {{task.description}}</p>
       <p>Agreed upon task: <br> {{taskoffer.description}}</p>
