--- a/core/projects/project_view.html
+++ b/core/projects/project_view.html
@@ -66,7 +66,7 @@
                     <h4 class="mt-3">{{task_accepted_offer.title}}</h4>
                     <p>Status: {{task_accepted_offer.get_status_display}}</p>
                     <p>Description: <br> {{task_accepted_offer.description}}</p>
-                    <p>Price offered: {{task_accepted_offer.price}} </p>
+                    <p>Price offered: {{task_accepted_offer.price_offered}} </p>
                     <p class="mt-2">Feedback given: <br> {{task_accepted_offer.feedback}}</p>
                 </div>
                 <div class="modal-footer">
@@ -105,7 +105,7 @@
                     <h4 class="mt-3">{{task_offer.title}}</h4>
                     <p>Status: {{task_offer.get_status_display}}</p>
                     <p>Description: <br> {{task_offer.description}}</p>
-                    <p>Price offered: {{task_offer.price}} </p>
+                    <p>Price offered: {{task_offer.price_offered}} </p>
 
                     <h3 class="mt-3">Response: </h3>
                     {% csrf_token %}
@@ -211,7 +211,7 @@
                           <h4 class="mt-3">{{offer.title}}</h4>
                           <p>Status: {{offer.get_status_display}}</p>
                           <p>Description: <br> {{offer.description}}</p>
-                          <p>Price offered: {{offer.price}} </p>
+                          <p>Price offered: {{offer.price_offered}} </p>
                           {%if offer.status == 'a' or offer.status == 'd' %}
                           <p class="mt-2">Feedback from project owner: <br> {{offer.feedback}}</p>
                           {% endif %}
