--- a/core/projects/task_view.html
+++ b/core/projects/task_view.html
@@ -13,7 +13,7 @@
   <p>Solver: {{task_accepted_offer.offerer.user.username}}</p>
 
   <p>Original task budget: {{task.budget}} </p>
-  <p>Agreed payment: {{task_accepted_offer.price}}</p>
+  <p>Agreed payment: {{task_accepted_offer.price_offered}}</p>
 
   <p class="">{{ task.description }}</p>
 
